# digiboard

./: README.rst  _version.py  digiboard.py  pyproject.toml  pytest.ini  reference.txt  requirements-dev.txt  requirements.txt  setup.py
digiboard/: config.py  logging.yaml
digiboard/connector/persistence/: db_oracle.py  db_sqlite.py
test/files/: mockup_trade1.xlsx  mockup_trade2.csv  rtp_project_mockup_dashboard.twb
